// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render icon briefcase 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-briefcase"
/>
`;

exports[`Icon should render icon calendar 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-calendar"
/>
`;

exports[`Icon should render icon checkmark 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-checkmark"
/>
`;

exports[`Icon should render icon chevron-down 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-chevron-down"
/>
`;

exports[`Icon should render icon chevron-up 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-chevron-up"
/>
`;

exports[`Icon should render icon close 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-close"
/>
`;

exports[`Icon should render icon cog 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-cog"
/>
`;

exports[`Icon should render icon dashboard 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-dashboard"
/>
`;

exports[`Icon should render icon enter 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-enter"
/>
`;

exports[`Icon should render icon exit 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-exit"
/>
`;

exports[`Icon should render icon eye 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-eye"
/>
`;

exports[`Icon should render icon full-screen 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-full-screen"
/>
`;

exports[`Icon should render icon home 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-home"
/>
`;

exports[`Icon should render icon layers 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-layers"
/>
`;

exports[`Icon should render icon menu 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-menu"
/>
`;

exports[`Icon should render icon minus 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-minus"
/>
`;

exports[`Icon should render icon rocket 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-rocket"
/>
`;

exports[`Icon should render icon users 1`] = `
.c0 {
  text-align: center;
}

<span
  className="c0 lni lni-users"
/>
`;

exports[`Icon should render icon with custom styles 1`] = `
.c1 {
  text-align: center;
}

.c0 {
  font-size: 1.5em;
  margin-right: 1.75rem;
}

<span
  className="c0 c1 lni lni-home"
/>
`;
